tests/snapshots/examples_fixtures/type_system__failing__162_tuple_destructure_unresolved_strict_e425.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/162_tuple_destructure_unresolved_strict_e425.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `mystery_value`.

  examples/type_system/failing/162_tuple_destructure_unresolved_strict_e425.flx:21:18
   |
21 |     let (a, b) = mystery_value
   |                  ^^^^^^^^^^^^^

Hint:
  Define it first: let mystery_value = ...;
== stdout ==
<not executed>
